initial push of crazy hackery - not intended to function
