# airflow/api_connexion/openapi/v1.yaml
@@ -392,7 +392,22 @@ paths:
           $ref: '#/components/responses/PermissionDenied'
         '404':
           $ref: '#/components/responses/NotFound'
-
+  /example_invalidate_dagbag_cache:
+    post:
+      # TODO: this is an example do not MERGE THIS TO MAIN
+      summary: example invalidation of a dagbag cache
+      x-openapi-router-controller: airflow.api_connexion.endpoints.dag_endpoint
+      operationId: example_invalidate_dagbag_cache
+      tags: [DAG]
+      responses:
+        '200':
+          description: Success.
+        '401':
+          $ref: '#/components/responses/Unauthenticated'
+        '403':
+          $ref: '#/components/responses/PermissionDenied'
+        '404':
+          $ref: '#/components/responses/NotFound'
   /dags:
     get:
       summary: List DAGs
